--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ flask-heroku = "*"
 flask-cors = "*"
 psycopg2 = "*"
 flask-sqlalchemy = "*"
+flask-mail = "*"
 
 [requires]
 python_version = "3.7"
