--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ flask-cors = "*"
 psycopg2 = "*"
 flask-sqlalchemy = "*"
 flask-mail = "*"
+flask-login = "*"
 
 [requires]
 python_version = "3.7"
